Bug 736798 - Opening attached .eml's shouldn't list parent email's attachments too; r=bienvenu